Task statuses z-index fixes for tablets.

--- a/app/styles/mobile.css
+++ b/app/styles/mobile.css
@@ -91,7 +91,7 @@ footer {
     top:0; left:0;
     width:200%;
     height:200%;
-    z-index:-10;
+    z-index:-1;
     opacity: 0;
 }
 #taskStatuses {
@@ -104,7 +104,7 @@ footer {
     border: 2px solid #cccccc;
     border-radius: 5pt;
     box-shadow: 0px 0px 10px #777779;
-    z-index:-9;
+    z-index:-10;
     opacity: 0;
 }
 #taskStatusesTitle {
